@@ -31,9 +31,13 @@ import io.trino.spi.type.Type;
 import io.trino.sql.tree.DropColumn;
 import io.trino.sql.tree.Expression;
 import io.trino.sql.tree.Identifier;
+import io.trino.sql.tree.Resolver;
 
+import java.util.AbstractMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import static com.google.common.base.Verify.verifyNotNull;
 import static com.google.common.collect.ImmutableList.toImmutableList;
@@ -44,6 +48,7 @@ import static io.trino.spi.StandardErrorCode.COLUMN_NOT_FOUND;
 import static io.trino.spi.StandardErrorCode.NOT_SUPPORTED;
 import static io.trino.spi.StandardErrorCode.TABLE_NOT_FOUND;
 import static io.trino.sql.analyzer.SemanticExceptions.semanticException;
+import static io.trino.sql.tree.IdentifierKind.COLUMN;
 import static java.util.Objects.requireNonNull;
 
 public class DropColumnTask
@@ -73,7 +78,9 @@ public class DropColumnTask
             WarningCollector warningCollector)
     {
         Session session = stateMachine.getSession();
-        QualifiedObjectName tableName = createQualifiedObjectName(session, statement, statement.getTable());
+        QualifiedObjectName tableName = createQualifiedObjectName(session, statement, statement.getTable(), metadata);
+        Resolver resolver = metadata.getResolverManager().getResolver(session, tableName.catalogName());
+
         RedirectionAwareTableHandle redirectionAwareTableHandle = metadata.getRedirectionAwareTableHandle(session, tableName);
         if (redirectionAwareTableHandle.tableHandle().isEmpty()) {
             if (!statement.isTableExists()) {
@@ -83,21 +90,25 @@ public class DropColumnTask
         }
         TableHandle tableHandle = redirectionAwareTableHandle.tableHandle().get();
 
-        // Use getParts method because the column name should be lowercase
-        String column = statement.getField().getParts().get(0);
+        // Use getCanonicalizedValue method because the columnName should be canonicalized
+        String columnName = resolver.canonicalize(statement.getField().getOriginalParts().getFirst());
 
-        QualifiedObjectName qualifiedTableName = redirectionAwareTableHandle.redirectedTableName().orElse(tableName);
+        QualifiedObjectName qualifiedTableName = redirectionAwareTableHandle.redirectedTableName().map(r -> r.asResolvedQualifiedObjectName(resolver::predicate)).orElse(tableName);
         accessControl.checkCanDropColumn(session.toSecurityContext(), qualifiedTableName);
 
-        ColumnHandle columnHandle = metadata.getColumnHandles(session, tableHandle).get(column);
+        Map<String, ColumnHandle> columnHandles = metadata.getColumnHandles(session, tableHandle).entrySet().stream()
+                .map(entry -> new AbstractMap.SimpleEntry<>(resolver.compare(entry.getKey(), COLUMN), entry.getValue()))
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+
+        ColumnHandle columnHandle = columnHandles.get(resolver.compare(columnName, COLUMN));
         if (columnHandle == null) {
             if (!statement.isColumnExists()) {
-                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", column);
+                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", resolver.compare(columnName, COLUMN));
             }
             return immediateVoidFuture();
         }
 
-        // Use getOriginalParts method because field names in row types are case-sensitive
+        // Use getValue method because field names in row types are case-sensitive
         List<String> fieldPath = statement.getField().getOriginalParts().subList(1, statement.getField().getOriginalParts().size()).stream()
                 .map(Identifier::getValue)
                 .collect(toImmutableList());
